# FFT-scorer

./: .gitignore  README.md  pyproject.toml  results.pkl
assets/: PRDBv3.json
notebooks/: pdb-visualizer.ipynb
src/: phase1.py  phase2.py  phase3.py  phase4.py  phase5.py  results.pkl  run.py
src/generated_PDBS/1ASY/rank1/results/: 1ASY_AR.asa  1ASY_AR.rsa  1ASY_R.asa  1ASY_R.rsa  ASA_FINAL  BSA_FINAL  INTERFACE_ABSENT
src/generated_PDBS/1ASY/rank2/results/: 1ASY_A.asa  1ASY_AR.asa  1ASY_AR.rsa  1ASY_R.asa  1ASY_R.rsa  ASA_FINAL  BSA_FINAL
src/generated_PDBS/1ASY/rank3/results/: 1ASY_AR.asa  1ASY_AR.rsa  1ASY_R.asa  1ASY_R.rsa  ASA_FINAL  BSA_FINAL  INTERFACE_ABSENT
src/generated_PDBS/1ASY/rank4/results/: 1ASY_A.rsa  1ASY_AR.asa  1ASY_AR.rsa  1ASY_R.asa  1ASY_R.rsa  ASA_FINAL  INTERFACE_ABSENT
src/generated_PDBS/1ASY/rank5/results/: 1ASY_AR.asa  1ASY_AR.rsa  1ASY_R.asa  1ASY_R.rsa  ASA_FINAL
src/multi-int/: generate_3zc0.py  multi_interface.py  run_pipeline.py  run_pipeline_with_scoring.py  scoring_engine.py
src/results/: results.pkl
src_v2/: phase1.py  phase2.py  phase4.py  phase5.py  propensity.json  result.txt  results.pkl  run.py
src_v2/elec_results/: result.txt
src_v2/multires_results/: result.txt
src_v2/shape_results/: result.txt
src_v2/utils/: electrostatics.py  multires.py  propensity.py  score_v_irmsd_graph.py
utils/: filter-UU.py  pdb-copy-pro-rna.py  pdb-downloader.py
